--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 </a>
                 
                 <div class="texto-mapa">
-                    Visualização completa em uma nova janela
+                    Visualização completa em nova janela
                 </div>
             </div>
         </div>
