--- a/index.html
+++ b/index.html
@@ -414,10 +414,9 @@
                 </div>
                 <div class="video-item">
                     <video controls style="width: 100%; height: 200px; background: #000;">
-                        <source src="videos/A HISTÓRIA DE BREJO GRANDE DO ARAGUAIA-2025.mp4" type="video/mp4">
-                        Seu navegador não suporta a tag de vídeo.
-                    </video>
-                    <div class="video-info"><h3>História de Brejo Grande do Araguaia</h3><p>Vídeo local: 2025</p></div>
+                    <iframe src="https://youtu.be/QUsGAQ7nNn0?si=gi4uNERzU_mVaCo0" allowfullscreen></iframe>
+                
+                    <div class="video-info"><h3>História de Brejo Grande do Araguaia</h3><p></div>
                 </div>
             </div>
         </div>
