--- a/index.html
+++ b/index.html
@@ -415,8 +415,7 @@
                 <div class="video-item">
                     <video controls style="width: 100%; height: 200px; background: #000;">
                     <iframe src="https://youtu.be/QUsGAQ7nNn0?si=gi4uNERzU_mVaCo0" allowfullscreen></iframe>
-                
-                    <div class="video-info"><h3>História de Brejo Grande do Araguaia</h3><p></div>
+                    <div class="video-info"><h3>A História de Brejo Grande do Araguaia</h3><p>Documentário educativo</p></div>
                 </div>
             </div>
         </div>
