--- a/index.html
+++ b/index.html
@@ -412,10 +412,10 @@
                     <iframe src="https://www.youtube.com/embed/5eHU-Wk8B8M" allowfullscreen></iframe>
                     <div class="video-info"><h3>Canal Futura</h3><p>Documentário educativo</p></div>
                 </div>
-                <div class="video-item">
-                    <video controls style="width: 100%; height: 200px; background: #000;">
-                    <iframe src="https://youtu.be/QUsGAQ7nNn0?si=gi4uNERzU_mVaCo0" allowfullscreen></iframe>
-                    <div class="video-info"><h3>A História de Brejo Grande do Araguaia</h3><p>Documentário educativo</p></div>
+                <<div class="video-item">
+    <iframe src="https://www.youtube.com/embed/QUsGAQ7nNn0" allowfullscreen></iframe>
+    <div class="video-info"><h3>A História de Brejo Grande do Araguaia</h3><p>Documentário educativo</p></div>
+</div>
                 </div>
             </div>
         </div>
