--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 </a>
                 
                 <div class="texto-mapa">
-                    Visualização completa em nova janela
+                    Visualização completa em uma nova janela
                 </div>
             </div>
         </div>
@@ -412,10 +412,10 @@
                     <iframe src="https://www.youtube.com/embed/5eHU-Wk8B8M" allowfullscreen></iframe>
                     <div class="video-info"><h3>Canal Futura</h3><p>Documentário educativo</p></div>
                 </div>
-                <<div class="video-item">
-    <iframe src="https://www.youtube.com/embed/QUsGAQ7nNn0" allowfullscreen></iframe>
-    <div class="video-info"><h3>A História de Brejo Grande do Araguaia</h3><p>Documentário educativo</p></div>
-</div>
+                <div class="video-item">
+                    <iframe src="https://www.youtube.com/embed/QUsGAQ7nNn0" allowfullscreen></iframe>
+                    <div class="video-info"><h3>A História de Brejo Grande do Araguaia</h3><p>Documentário educativo</p></div>
+                </div>
                 </div>
             </div>
         </div>
