--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <p><strong>Proposta didático-pedagógica - Mestrado Profissional em Ensino de História</strong></p>
             <p><strong>Autor:</strong> Jorge Kitchell Pinheiro Lima</p>
             <p><strong>Orientador:</strong> Prof. Dr. Moisés Pereira da Silva</p>
-            <p><strong>Desenvolvimento do site e do web-mapa:</strong> Jenifer R. Silva - <a href="https://www.instagram.com/labmap.s/" target="_blank" class="instagram-link">@labmap.s</a></p>
+            <p><strong>Desenvolvimento do site e do mapa interativo:</strong> Jenifer R. Silva - <a href="https://www.instagram.com/labmap.s/" target="_blank" class="instagram-link">@labmap.s</a></p>
             <button class="btn-acessar" onclick="fecharPopup()">ACESSAR MAPA INTERATIVO</button>
         </div>
     </div>
