--- a/mapa-qgis.html
+++ b/mapa-qgis.html
@@ -53,6 +53,8 @@
         <script src="data/CAMPANHASMILITARES_13.js"></script>
         <script src="data/LOCAISDECONFLITOSEOCULTAO_14.js"></script>
         <script src="data/PERSONAGENSHISTRICOS_15.js"></script>
+        <script src="data/BASESGUERRILHEIRAS_16.js"></script>
+        <script src="data/BASEMILITAR_17.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:false, maxZoom:28, minZoom:1
@@ -601,6 +603,12 @@
                     <tr>\
                         <td colspan="2">' + (feature.properties['FOTO'] !== null ? '<img src="images/' + String(feature.properties['FOTO']).replace(/[\\/:]/g, '_').trim().replace(/'/g, '\'').replace(/"/g, '&quot;') + '">' : '') + '</td>\
                     </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['contexto'] !== null ? autolinker.link(String(feature.properties['contexto']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['LINK'] !== null ? autolinker.link(String(feature.properties['LINK']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
                 </table>';
             var content = removeEmptyRowsFromPopupContent(popupContent, feature);
 			layer.on('popupopen', function(e) {
@@ -618,7 +626,7 @@
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
-                weight: 1,
+                weight: 2.0,
                 fill: true,
                 fillOpacity: 1,
                 fillColor: 'rgba(141,90,153,1.0)',
@@ -676,7 +684,7 @@
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
-                weight: 1,
+                weight: 2.0,
                 fill: true,
                 fillOpacity: 1,
                 fillColor: 'rgba(255,234,0,1.0)',
@@ -781,6 +789,9 @@
                     <tr>\
                         <td colspan="2">' + (feature.properties['LINK'] !== null ? autolinker.link(String(feature.properties['LINK']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['sobre'] !== null ? autolinker.link(String(feature.properties['sobre']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
                 </table>';
             var content = removeEmptyRowsFromPopupContent(popupContent, feature);
 			layer.on('popupopen', function(e) {
@@ -798,7 +809,7 @@
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
-                weight: 1.0,
+                weight: 2.0,
                 fill: true,
                 fillOpacity: 1,
                 fillColor: 'rgba(255,81,0,1.0)',
@@ -825,6 +836,119 @@
         });
         bounds_group.addLayer(layer_PERSONAGENSHISTRICOS_15);
         map.addLayer(layer_PERSONAGENSHISTRICOS_15);
+        function pop_BASESGUERRILHEIRAS_16(feature, layer) {
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['id'] !== null ? autolinker.link(String(feature.properties['id']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['DESTACAMEN'] !== null ? autolinker.link(String(feature.properties['DESTACAMEN']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['A'] !== null ? autolinker.link(String(feature.properties['A']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['B'] !== null ? autolinker.link(String(feature.properties['B']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['C'] !== null ? autolinker.link(String(feature.properties['C']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
+			layer.on('popupopen', function(e) {
+				addClassToPopupIfMedia(content, e.popup);
+			});
+			layer.bindPopup(content, { maxHeight: 400 });
+        }
+
+        function style_BASESGUERRILHEIRAS_16_0() {
+            return {
+                pane: 'pane_BASESGUERRILHEIRAS_16',
+                radius: 8.0,
+                opacity: 1,
+                color: 'rgba(255,255,255,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 2.0,
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(0,0,0,1.0)',
+                interactive: true,
+            }
+        }
+        map.createPane('pane_BASESGUERRILHEIRAS_16');
+        map.getPane('pane_BASESGUERRILHEIRAS_16').style.zIndex = 416;
+        map.getPane('pane_BASESGUERRILHEIRAS_16').style['mix-blend-mode'] = 'normal';
+        var layer_BASESGUERRILHEIRAS_16 = new L.geoJson(json_BASESGUERRILHEIRAS_16, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_BASESGUERRILHEIRAS_16',
+            layerName: 'layer_BASESGUERRILHEIRAS_16',
+            pane: 'pane_BASESGUERRILHEIRAS_16',
+            onEachFeature: pop_BASESGUERRILHEIRAS_16,
+            pointToLayer: function (feature, latlng) {
+                var context = {
+                    feature: feature,
+                    variables: {}
+                };
+                return L.circleMarker(latlng, style_BASESGUERRILHEIRAS_16_0(feature));
+            },
+        });
+        bounds_group.addLayer(layer_BASESGUERRILHEIRAS_16);
+        map.addLayer(layer_BASESGUERRILHEIRAS_16);
+        function pop_BASEMILITAR_17(feature, layer) {
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['id'] !== null ? autolinker.link(String(feature.properties['id']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NOME'] !== null ? autolinker.link(String(feature.properties['NOME']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
+			layer.on('popupopen', function(e) {
+				addClassToPopupIfMedia(content, e.popup);
+			});
+			layer.bindPopup(content, { maxHeight: 400 });
+        }
+
+        function style_BASEMILITAR_17_0() {
+            return {
+                pane: 'pane_BASEMILITAR_17',
+                radius: 8.0,
+                opacity: 1,
+                color: 'rgba(255,255,255,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 2.0,
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(250,12,208,1.0)',
+                interactive: true,
+            }
+        }
+        map.createPane('pane_BASEMILITAR_17');
+        map.getPane('pane_BASEMILITAR_17').style.zIndex = 417;
+        map.getPane('pane_BASEMILITAR_17').style['mix-blend-mode'] = 'normal';
+        var layer_BASEMILITAR_17 = new L.geoJson(json_BASEMILITAR_17, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_BASEMILITAR_17',
+            layerName: 'layer_BASEMILITAR_17',
+            pane: 'pane_BASEMILITAR_17',
+            onEachFeature: pop_BASEMILITAR_17,
+            pointToLayer: function (feature, latlng) {
+                var context = {
+                    feature: feature,
+                    variables: {}
+                };
+                return L.circleMarker(latlng, style_BASEMILITAR_17_0(feature));
+            },
+        });
+        bounds_group.addLayer(layer_BASEMILITAR_17);
+        map.addLayer(layer_BASEMILITAR_17);
         const url = {"Nominatim OSM": "https://nominatim.openstreetmap.org/search?format=geojson&addressdetails=1&",
         "France BAN": "https://api-adresse.data.gouv.fr/search/?"}
         var photonControl = L.control.photon({
@@ -879,6 +1003,8 @@
             }
         });
         var overlaysTree = [
+            {label: '<img src="legend/BASEMILITAR_17.png" /> BASE MILITAR', layer: layer_BASEMILITAR_17},
+            {label: '<img src="legend/BASESGUERRILHEIRAS_16.png" /> BASES GUERRILHEIRAS', layer: layer_BASESGUERRILHEIRAS_16},
             {label: '<img src="legend/PERSONAGENSHISTRICOS_15.png" /> PERSONAGENS HISTÓRICOS', layer: layer_PERSONAGENSHISTRICOS_15},
             {label: '<img src="legend/LOCAISDECONFLITOSEOCULTAO_14.png" /> LOCAIS DE CONFLITOS E OCULTAÇÃO', layer: layer_LOCAISDECONFLITOSEOCULTAO_14},
             {label: '<img src="legend/CAMPANHASMILITARES_13.png" /> CAMPANHAS MILITARES', layer: layer_CAMPANHASMILITARES_13},
@@ -891,7 +1017,7 @@
             {label: '<img src="legend/SoGeraldodoAraguaia_7.png" /> São Geraldo do Araguaia', layer: layer_SoGeraldodoAraguaia_7},
             {label: '<img src="legend/SoDomingosdoAraguaia_6.png" /> São Domingos do Araguaia', layer: layer_SoDomingosdoAraguaia_6},
             {label: '<img src="legend/Xambio_5.png" /> Xambioá', layer: layer_Xambio_5},]},
-        {label: '<b>ESTADOS</b>', collapsed: true, selectAllCheckbox: true, children: [
+        {label: '<b>ESTADOS</b>',  selectAllCheckbox: true, children: [
             {label: '<img src="legend/PAR_4.png" /> PARÁ', layer: layer_PAR_4},
             {label: '<img src="legend/MARANHAO_3.png" /> MARANHAO', layer: layer_MARANHAO_3},
             {label: '<img src="legend/TOCANTIS_2.png" /> TOCANTIS', layer: layer_TOCANTIS_2},]},
