--- a/index.html
+++ b/index.html
@@ -444,9 +444,12 @@
                 <div class="referencia-item">
                     <p><strong>Referências dos Vídeos:</strong></p>
                     <ul>
-                        <li>Ativa Biografia – Documentário sobre a Guerrilha do Araguaia. YouTube: <a href="https://www.youtube.com/watch?v=sX6mjSmuqrU" target="_blank">link</a></li>
-                        <li>TV Grabois – Análise histórica do conflito. YouTube: <a href="https://www.youtube.com/watch?v=Z1JTgo3ZGuI" target="_blank">link</a></li>
-                        <li>TV Grabois – Memórias da Guerrilha. YouTube: <a href="https://www.youtube.com/watch?v=pIlL7O1XliY" target="_blank">link</a></li>
+                        <li>e: <a href= ATIVA BIOGRAFIA. Quem foi o Guerrilheiro Osvaldão da Guerrilha do Araguaia? YouTube, 1 jan. 2025. Disponível em: https://www.youtube.com/watch?v=sX6mjSmuqrU&t=6s
+. Acesso em: 14 out. 2025. a></li>
+                        <li><a href= FERNANDES, Vandré. Camponeses do Araguaia – A Guerrilha vista por dentro. YouTube. Brasília: Memorial da Democracia, 2023. Disponível em: https://www.youtube.com/watch?v=wLkmsrfIGZU&t=2s
+. Acesso em: 14 out. 2025. a></li>
+                        <li><a FERNANDES, Vandré. Camponeses do Araguaia – A Guerrilha vista por dentro. YouTube. Brasília: Memorial da Democracia, 2023. Disponível em: https://www.youtube.com/watch?v=txyr_fgZSac
+. Acesso em: 14 out. 2025. a></li>
                         <li>TV Grabois – Depoimentos e histórias. YouTube: <a href="https://www.youtube.com/watch?v=mPprWbGaGmo" target="_blank">link</a></li>
                         <li>Memorial da Democracia – Documentário histórico. YouTube: <a href="https://www.youtube.com/watch?v=wLkmsrfIGZU" target="_blank">link</a></li>
                         <li>Memorial da Democracia – Análise do contexto político. YouTube: <a href="https://www.youtube.com/watch?v=txyr_fgZSac" target="_blank">link</a></li>
