--- a/index.html
+++ b/index.html
@@ -444,18 +444,33 @@
                 <div class="referencia-item">
                     <p><strong>Referências dos Vídeos:</strong></p>
                     <ul>
-                        <li>e: <a href= ATIVA BIOGRAFIA. Quem foi o Guerrilheiro Osvaldão da Guerrilha do Araguaia? YouTube, 1 jan. 2025. Disponível em: https://www.youtube.com/watch?v=sX6mjSmuqrU&t=6s
-. Acesso em: 14 out. 2025. a></li>
-                        <li><a href= FERNANDES, Vandré. Camponeses do Araguaia – A Guerrilha vista por dentro. YouTube. Brasília: Memorial da Democracia, 2023. Disponível em: https://www.youtube.com/watch?v=wLkmsrfIGZU&t=2s
-. Acesso em: 14 out. 2025. a></li>
-                        <li><a FERNANDES, Vandré. Camponeses do Araguaia – A Guerrilha vista por dentro. YouTube. Brasília: Memorial da Democracia, 2023. Disponível em: https://www.youtube.com/watch?v=txyr_fgZSac
-. Acesso em: 14 out. 2025. a></li>
-                        <li>TV Grabois – Depoimentos e histórias. YouTube: <a href="https://www.youtube.com/watch?v=mPprWbGaGmo" target="_blank">link</a></li>
-                        <li>Memorial da Democracia – Documentário histórico. YouTube: <a href="https://www.youtube.com/watch?v=wLkmsrfIGZU" target="_blank">link</a></li>
-                        <li>Memorial da Democracia – Análise do contexto político. YouTube: <a href="https://www.youtube.com/watch?v=txyr_fgZSac" target="_blank">link</a></li>
-                        <li>Canal Futura – Documentário educativo. YouTube: <a href="https://www.youtube.com/watch?v=5eHU-Wk8B8M" target="_blank">link</a></li>
-                        <li>A História de Brejo Grande do Araguaia – Documentário educativo. YouTube: <a href="https://www.youtube.com/watch?v=QUsGAQ7nNn0" target="_blank">link</a></li>
-                    </ul>
+                          <div class="referencias-list">
+                <div class="referencia-item">
+                    TV UFG; CANAL FUTURA. Romualdo Pessoa: historiador comenta os conflitos da Guerrilha do Araguaia. YouTube. Goiânia: TV UFG / Canal Futura, 2021. Disponível em: <a href="https://www.youtube.com/watch?v=5eHU-Wk8B8M&t=38s" target="_blank">https://www.youtube.com/watch?v=5eHU-Wk8B8M&t=38s</a>. Acesso em: 14 out. 2025.
+                </div>
+                <div class="referencia-item">
+                    TV GRABOIS. 49 anos da Guerrilha do Araguaia. YouTube. São Paulo: TV Grabois, 2023. Disponível em: <a href="https://www.youtube.com/watch?v=Z1JTgo3ZGuI" target="_blank">https://www.youtube.com/watch?v=Z1JTgo3ZGuI</a>. Acesso em: 14 out. 2025.
+                </div>
+                <div class="referencia-item">
+                    TV GRABOIS. 50 anos do desaparecimento de Maurício Grabois. YouTube. São Paulo: TV Grabois, 2023. Disponível em: <a href="https://www.youtube.com/watch?v=pIlL7O1XliY" target="_blank">https://www.youtube.com/watch?v=pIlL7O1XliY</a>. Acesso em: 14 out. 2025.
+                </div>
+                <div class="referencia-item">
+                    TV GRABOIS. João Amazonas Vive! 23 anos sem o gigante do comunismo brasileiro. YouTube. São Paulo: TV Grabois, 2023. Disponível em: <a href="https://www.youtube.com/watch?v=mPprWbGaGmo" target="_blank">https://www.youtube.com/watch?v=mPprWbGaGmo</a>. Acesso em: 14 out. 2025.
+                </div>
+                <div class="referencia-item">
+                    FERNANDES, Vandré. Camponeses do Araguaia – A Guerrilha vista por dentro. YouTube. Brasília: Memorial da Democracia, 2023. Disponível em: <a href="https://www.youtube.com/watch?v=wLkmsrfIGZU" target="_blank">https://www.youtube.com/watch?v=wLkmsrfIGZU</a>. Acesso em: 14 out. 2025.
+                </div>
+                <div class="referencia-item">
+                    PINHEIRO LIMA, Jorge Kitchell. A história de Brejo Grande do Araguaia 2025. YouTube, 2025. Disponível em: <a href="https://www.youtube.com/watch?v=QUsGAQ7nNn0" target="_blank">https://www.youtube.com/watch?v=QUsGAQ7nNn0</a>. Acesso em: 14 out. 2025.
+                </div>
+                <div class="referencia-item">
+                    ATIVA BIOGRAFIA. Quem foi o Guerrilheiro Osvaldão da Guerrilha do Araguaia? YouTube, 2023. Disponível em: <a href="https://www.youtube.com/watch?v=sX6mjSmuqrU" target="_blank">https://www.youtube.com/watch?v=sX6mjSmuqrU</a>. Acesso em: 14 out. 2025.
+                </div>
+                <div class="referencia-item">
+                    O PLACEBO. Dinalva Oliveira Teixeira, a guerrilheira que enfrentou a ditadura militar. YouTube, 2023. Disponível em: <a href="https://www.youtube.com/watch?v=sX6mjSmuqrU" target="_blank">https://www.youtube.com/watch?v=sX6mjSmuqrU</a>. Acesso em: 14 out. 2025.
+                </div>
+            </div>
+        </div>
                 </div>
             </div>
         </div>
